Added eww calendar

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -1,8 +1,18 @@
-$bg-1: #171728;
-$bg-2: #1d1d2f;
+$bg-1: #12121f;
+$bg-2: #171728;
+$bg-3: #1d1d2f;
+$bg-4: #222236;
+$bg-5: #29293f;
 $fg: #d4d7ff;
-$blue: #729ce9;
+$grey-1: #4f5071;
+$grey-2: #595b7e;
+$grey-3: #63658b;
+$green: #8fe0b4;
 $yellow: #fdf5b0;
+$blue: #729ce9;
+$cyan: #78e2e1;
+$orange: #e7c188;
+$purple: #8983d8;
 $red: #da587d;
 
 * {
@@ -20,13 +30,13 @@ $red: #da587d;
 		padding: .5em;
 		border-radius: 0.1em;
 		background-color: rgba($bg-2, 1.0);
-		color: rgba($fg, 0.8);
+		color: rgba($fg, 1.0);
 
 		&:nth-child(1) {
 			&:hover {
 				transition: 200ms linear background-color, border-radius;
 				color: rgba($blue, 0.9);
-				background-color: rgba($bg-1, 0.9);
+				background-color: rgba($bg-1, 1.0);
 			}
 		}
 
@@ -58,9 +68,60 @@ $red: #da587d;
 			&:hover {
 				transition: 200ms linear background-color, border-radius;
 				color: rgba($red, 0.9);
-				background-color: rgba($bg-1, 1.0);
+				background-color: rgba($bg-2, 1.0);
 			}
 		}
-
 	}
+}
+
+
+.calendar {
+	font-size: 22;
+	background-color: rgba($bg-1, 0.9);
+	color: rgba($fg, 1.0);
+	border-radius: 12px;
+	margin: 2px;
+	padding: 5px;
+
+	&:selected {
+		background-color: rgba($fg, 1.0);
+		color: rgba($bg-1, 1.0);
+		border-radius: 16px;
+	}
+
+	&:indeterminate {
+		color: rgba($grey-1, 0.9);
+	}
+
+	.calendar_box {
+		background-color: rgba($bg-3, 1.0);
+		color: rgba($fg, 1.0);
+		// padding: 10px;
+		border-radius: 12px;
+		margin-top: -8px;
+	}
+
+	.calendar_layout_box {
+		background-color: rgba($bg-3, 1.0);
+		padding: 18px;
+		margin-top: -12px;
+	}
+
+	.calendar.highlight {
+		background-color: rgba($bg-1, 1.0);
+		color: rgba($fg, 1.0);
+		font-weight: bold;
+		border-radius: 12px;
+	}
+}
+
+.time_box {
+	font-size: 22px;
+	background-color: rgba($bg-1, 1.0);
+	color: rgba($fg, 1.0);
+	margin-top: 5px;
+	padding: 4px;
+	padding-left: 12px;
+	padding-right: 12px;
+	border-radius: 12px;
 }
