Update color palette

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -7,12 +7,12 @@ $fg: #d4d7ff;
 $grey-1: #4f5071;
 $grey-2: #595b7e;
 $grey-3: #63658b;
-$green: #70cfb3;
-$yellow: #e5d99e;
-$blue: #7e9aea;
-$cyan: #7ed5ed;
-$purple: #9688e4;
-$red: #c04779;
+$green: #70D7B9;
+$yellow: #E5D99F;
+$blue: #74B8FB;
+$cyan: #44F8F8;
+$purple: #9688E4;
+$red: #C94A70;
 
 * {
   all: unset;
