Update color palette

--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -7,12 +7,12 @@ $fg: #d4d7ff;
 $grey-1: #4f5071;
 $grey-2: #595b7e;
 $grey-3: #63658b;
-$green: #70D7B9;
-$yellow: #E5D99F;
-$blue: #74B8FB;
-$cyan: #44F8F8;
-$purple: #9688E4;
-$red: #C94A70;
+$green: #7ed7c0;
+$yellow: #ecdfac;
+$blue: #87bff7;
+$cyan: #aaecf8;
+$purple: #9486e4;
+$red: #bd4277;
 
 * {
   all: unset;
